--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [env:esp32cam]
 platform = espressif32
 board = upesy_wroom
-upload_port = /dev/ttyACM0 
-monitor_port = /dev/ttyACM0
+upload_port = /dev/ttyUSB0
+monitor_port = /dev/ttyUSB0
 framework = arduino
 lib_deps = frankjoshua/Rosserial Arduino Library@^0.9.1
