--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = espressif32
 board = upesy_wroom
 upload_port = /dev/ttyUSB0
 monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
 framework = arduino
 lib_deps = frankjoshua/Rosserial Arduino Library@^0.9.1
